k8s/manifests/multi-node/cpu-llm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpu-llm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpu-llm-app
  template:
    metadata:
      labels:
        app: cpu-llm-app
    spec:
      nodeSelector:
        accelerator: cpu
      volumes:
      - name: cache-volume
        persistentVolumeClaim:
          claimName: mistral-7b
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
      containers:
      - name: mistral-7b
        image: vllm/vllm-openai:latest
        command: ["/bin/sh", "-c"]
        args: [
          "vllm serve mistralai/Mistral-7B-Instruct-v0.3 --trust-remote-code --enable-chunked-prefill --max_num_batched_tokens 1024"
        ]
        # env:
        # - name: HUGGING_FACE_HUB_TOKEN
        #   valueFrom:
        #     secretKeyRef:
        #       name: hf-token-secret
        #       key: token
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "10"
            memory: 20G
            nvidia.com/gpu: "1"
          requests:
            cpu: "2"
            memory: 6G
            nvidia.com/gpu: "1"
        volumeMounts:
        # - mountPath: /root/.cache/huggingface
        #   name: cache-volume
        - name: shm
          mountPath: /dev/shm
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 5
