k8s/manifests/multi-node/vllm-test-ilb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-svc-vllm
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Cluster
  loadBalancerIP: 10.0.1.111
  selector:
    app: cpu-llm-app
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8080
    targetPort: 8000
