k8s/manifests/multi-node/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-ingress 
  labels:
    app: ingress-controller
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: "10.0.1.111"
    kubernetes.io/ingress.class: "gce-internal"
    # nginx.ingress.kubernetes.io/rewrite-target: "/"
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: cpu-llm-app-svc
            port:
              number: 8080
